optimize: 添加注释，优化项目代码，rerank 模型分数阈值设置为 0.4